kubernetes/kyverno/cluster-policies/disallow-host-path.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-host-path
  annotations:
    policies.kyverno.io/title: "Disallow hostPath Volumes"
    policies.kyverno.io/severity: "high"
    policies.kyverno.io/category: "Pod Security"
    policies.kyverno.io/subject: "Pod"
    policies.kyverno.io/description: >-
      Prevent pods from using hostPath volumes.
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: check-host-path
      match:
        resources:
          kinds:
            - Pod
      exclude:
        resources:
          namespaces:
            - kube-system
            - kyverno
            - falco
            - github-runners
            - dependency-track
            - monitoring
      validate:
        message: "hostPath volumes are forbidden."
        pattern:
          spec:
            =(volumes):
              - X(hostPath): "?*"
