kubernetes/kyverno/cluster-policies/disallow-privilege-escalation.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privilege-escalation
  annotations:
    policies.kyverno.io/title: "Disallow Privilege Escalation"
    policies.kyverno.io/severity: "high"
    policies.kyverno.io/category: "Pod Security"
    policies.kyverno.io/subject: "Pod"
    policies.kyverno.io/description: >-
      Prevent containers from escalating privileges.
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: check-priv-esc
      match:
        resources:
          kinds:
            - Pod
      exclude:
        resources:
          namespaces:
            - kube-system
            - kyverno
            - falco
            - github-runners
            - dependency-track
            - monitoring
      validate:
        message: "allowPrivilegeEscalation must be false."
        pattern:
          spec:
            containers:
              - securityContext:
                  allowPrivilegeEscalation: false
