policies/kyverno-tests/resources/fail-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fail-pod
  namespace: default
spec:
  containers:
    - name: app
      image: dockerhub.io/library/nginx:latest
      resources: {}
      securityContext:
        allowPrivilegeEscalation: true
        readOnlyRootFilesystem: false
      volumeMounts:
        - name: host
          mountPath: /host
  volumes:
    - name: host
      hostPath:
        path: /etc
