policies/kyverno-tests/resources/pass-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pass-pod
  namespace: default
spec:
  securityContext:
    runAsNonRoot: true
  containers:
    - name: app
      image: 123456789012.dkr.ecr.me-central-1.amazonaws.com/ssf/app:v1.0.0
      resources:
        limits:
          cpu: "500m"
          memory: "512Mi"
      securityContext:
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
        capabilities:
          drop:
            - "ALL"
